--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <td style= "width:30%;">
           <img class = "newappIcon" src="images/newapp-icon.png">
         <td>
-            <h1>Hello there! This is the JDITC BlueMix Site (With Git Links)</h1>
+            <h1>Hello there! This is the JDITC BlueMix Site</h1>
           <p>Thanks for creating a
             <span class = "blue">NodeJS Starter Application</span>.
             Get started by reading our
