--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,7 @@
           <img class = "newappIcon" src="images/newapp-icon.png">
         <td>
             <h1>Hello there! This is the JDITC BlueMix Site</h1>
-          <p>Thanks for creating a
-            <span class = "blue">NodeJS Starter Application</span>.
-            Get started by reading our
-            <a href = "https://www.ng.bluemix.net/docs/#starters/nodejs/index.html#nodejs">documentation</a>
-            or use the Start Coding guide under your app in your dashboard.
+          <p>This one is just basic </p>
     </table>
   </body>
 
