--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>NodeJS Application</title>
+    <title>JDITC BLueMix</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
         <td style= "width:30%;">
           <img class = "newappIcon" src="images/newapp-icon.png">
         <td>
-            <h1>Hello there! This is the JDITC BlueMix Site</h1>
+            <h1>Hello there! </br>This is the JDITC BlueMix Site</h1>
           <p>This one is just basic </p>
     </table>
   </body>
